# CTE-HTML-Email-Generator

./: CLAUDE.md  packages.txt
src/: pyproject.toml  requirements.txt  run.py
src/hooks/: hook-streamlit.py
src/services/: categorizer.py  scraper.py
