[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-auth>=2.0.0",
    "gspread>=5.0.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain>=0.1.0",
    "openai>=1.1.0",
    "pandas>=1.5.3",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "selenium>=4.10.0",
    "streamlit>=1.24.0",
    "webdriver-manager>=3.8.6",
]
